fix grid gap for now page

--- a/src/pages/Now.css
+++ b/src/pages/Now.css
@@ -42,7 +42,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(1, 1fr);
-  grid-gap: 1rem;
+  grid-gap: 4rem;
   margin: 2em 2em;
   justify-content: center;
   justify-items: center;
